test/Fail/Issue7998VariableOverlapNoInstance.err
Issue7998VariableOverlapNoInstance.agda:5.3: error: [ParseError]
overlap<ERROR>  X : Set

-- Was error: [Parse...
